--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,7 @@ html{
 .img-cabezera{
     width: 100%;
     height: 500px;
-    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)) ,url("../img/banner2.webp");
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)) ,url("../img/mq.webp");
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
